ui_tests/assignment_8.box
type A {
    field: B,
}

type B {
    | One {},
    | Two {},
}

fn foo() {
    let a = new A { field: new B::One {} };
    a.1
}